<resources>
    <string name="app_name">Istarte</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAald9D0wdy86pmbTX1vWc9KMc-FXx3wzQ</string>
    <string name="places_api_billing_key" translatable="false">AIzaSyAald9D0wdy86pmbTX1vWc9KMc-FXx3wzQ</string>
    <string name="stripe__key" translatable="false">pk_live_K9xMzsJIVL58G0I9WBLvgtXQ006zizbseE</string>
    <string name="test_stripe__key" translatable="false">pk_test_51H06jcG8n0P9fHSa9E2Ji6Nz6crrvC5307J7Y1YyHhVv7kTKCQZAflCMWnDgYr9DS0kr9IOH6WbgvWhv5dRsXGMK00OcnRgJsr</string>
    <string name="version">Version</string>
    <string name="back_pressed_again">Please click BACK again to exit</string>
    <string name="toastErrorTitle">Error</string>
    <string name="toastSuccessTitle">Success</string>
    <string name="errorNoDataFound">No Data found</string>
    <string name="spinnerBtnClose">Close</string>
    <string name="countriesSpinnerTitle">Select Country</string>
    <string name="thirdPartySpinnerTitle">Select Third Party</string>
    <string name="monthsSpinnerTitle">Select Month</string>
    <string name="journalizationSpinnerTitle">Select Journalization Status</string>
    <string name="yearSpinnerTitle">Select Year</string>
    <string name="dateFormatSpinnerTitle">Select Date Format</string>
    <string name="accountModelSpinnerTitle">Select Active Account Model</string>
    <string name="parentAccountSpinnerTitle">Select Parent Account</string>
    <string name="accountingCodeAccountSpinnerTitle">Select Accounting Code Account</string>
    <string name="journalCodeAccountSpinnerTitle">Select Journal Code Account</string>
    <string name="journalSpinnerTitle">Select Journal</string>
    <string name="saleAccountSpinnerTitle">Select Sale Account</string>
    <string name="purchaseAccountSpinnerTitle">Select Purchase Account</string>
    <string name="personalizedGroupAccountSpinnerTitle">Select Personalized Group Account</string>
    <string name="accountTypeSpinnerTitle">Select Account Type</string>
    <string name="optionTypeSpinnerTitle">Select One Option</string>
    <string name="bankAccountTypeSpinnerTitle">Select Account</string>
    <string name="currencySpinnerTitle">Select Currency</string>
    <string name="payTypeSpinnerTitle">Select Payment Types</string>
    <string name="positionSpinnerTitle">Select Position</string>
    <string name="natureSpinnerTitle">Select Nature</string>
    <string name="leaveTypeSpinnerTitle">Select Leave Type</string>
    <string name="leaveTimeSpinnerTitle">Select Leave Time</string>
    <string name="approvedBySpinnerTitle">Select User</string>
    <string name="sizeSpinnerTitle">Select Size</string>
    <string name="vatSpinnerTitle">Select Vat</string>
    <string name="classSpinnerTitle">Select Class</string>
    <string name="productSpinnerTitle">Select Product</string>
    <string name="supplierSpinnerTitle">Select Supplier</string>
    <string name="sellingPackSpinnerTitle">Select Selling Packing Unit</string>
    <string name="sellingUnitSpinnerTitle">Select Selling Unit</string>
    <string name="incomeUnitSpinnerTitle">Select Incoming Unit</string>
    <string name="sellingVatSpinnerTitle">Select Selling Vat</string>
    <string name="quantitySpinnerTitle">Select Quantity</string>
    <string name="newAssignedAccountSpinnerTitle">Select New Account to Assign</string>
    <string name="productClassesSpinnerTitle">Select Class</string>
    <string name="complaintTypeSpinnerTitle">Select Complaint Type</string>
    <string name="trashTypeSpinnerTitle">Select Trashed Topic</string>
    <string name="statusSpinnerTitle">Select Status</string>
    <string name="nprSpinnerTitle">Select NPR</string>
    <string name="taxSpinnerTitle">Select Tax</string>
    <string name="fileTypeSpinnerTitle">Select File Format</string>
    <string name="orderNoSpinnerTitle">Select Order No</string>
    <string name="invoiceNoSpinnerTitle">Select Invoice No</string>
    <string name="lotNoSpinnerTitle">Select Lot No</string>
    <string name="handlerNameSpinnerTitle">Select Handler Name</string>
    <string name="dialogLoadingText">Loading Please wait …</string>
    <string name="dialogTitle">Loading</string>
    <string name="locationPermissionDenied">Permission Denied.</string>
    <string name="pleaseGiveLocationPermission">Please give Location permission .</string>
    <string name="turnOnLocation">Please Turn on your Location</string>
    <string name="log_out">Log out</string>
    <string name="delete_picture">Are you sure you want to delete the picture?</string>
    <string name="setCurrentLot">Are you sure you want to make this lot as default for VICWSP users?</string>
    <string name="deleteListItem">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="currently_there_is_no_data">Currently there is no data</string>
    <string name="invalid_card">Invalid Card</string>
    <string name="errorSomethingIsNotRight">Something is not right</string>
    <string name="dontHaveModulePermission">You don\'t have permission to access this.</string>
    <string name="no_internet_connection">No internet connection available</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
    <string name="Jan">Jan</string>
    <string name="Feb">Feb</string>
    <string name="Mar">Mar</string>
    <string name="Apr">Apr</string>
    <string name="Jun">Jun</string>
    <string name="Jul">Jul</string>
    <string name="Aug">Aug</string>
    <string name="Sep">Sep</string>
    <string name="Oct">Oct</string>
    <string name="Nov">Nov</string>
    <string name="Dec">Dec</string>
    <string name="actTitle">ACTIVATION</string>
    <string name="actLblEmail">EMAIL</string>
    <string name="actLblMobile">MOBILE</string>
    <string name="actbtnProcess">PROCESS</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="invalid_phone">Please enter a valid phone number</string>
    <string name="txt_already_acc">Already have an account?</string>
    <string name="txt_login_acc">Login now</string>
    <string name="loginTitle">SIGN IN TO YOUR ACCOUNT</string>
    <string name="loginSirBusiness">SIREN OR COMPANY NAME</string>
    <string name="loginEmail">EMAIL</string>
    <string name="loginPassword">PASSWORD</string>
    <string name="loginRemember">Remember me</string>
    <string name="loginForget">Forgot Password?</string>
    <string name="loginButton">LOGIN</string>
    <string name="loginFooterText">Don\'t have an account?</string>
    <string name="loginRegisterNow">Register now</string>
    <string name="login_invalid_email">Please enter a valid email address</string>
    <string name="login_empty_password">Please enter password</string>
    <string name="login_empty_siren">Please enter siren or company name</string>
    <string name="fingerPrintDialogueLabel">Touch your rear sensor to login using finger print.</string>
    <string name="cancelButton">Cancel</string>
    <string name="loginAtLeastOne">Please log in at least one time to use finger print</string>
    <string name="forgotPasswordTitle">FORGOT PASSWORD</string>
    <string name="forgotLabelEmail">EMAIL</string>
    <string name="forgotBtnSend">SEND</string>
    <string name="forgotErrorEmail">Please enter email address or mobile number.</string>
    <string name="forgotErrorFormatNote">Note: Mobile number format must be like +33109758351</string>
    <string name="resetPasswordTitle">RESET PASSWORD</string>
    <string name="resetBtnSend">RESET PASSWORD</string>
    <string name="resetLabelOTP">OTP</string>
    <string name="resetLabelPassword">PASSWORD</string>
    <string name="resetLabelConfirmPassword">CONFIRM PASSWORD</string>
    <string name="resetErrorOTP">Please enter OTP</string>
    <string name="resetErrorPassword">Please enter password</string>
    <string name="resetErrorCPassword">Please enter confirm password</string>
    <string name="registerTitle">REGISRATION</string>
    <string name="regLblSiren">SIREN</string>
    <string name="regLblcorporate">CORPORATE NAME</string>
    <string name="regLblcorporateAdd">CORPORATE ADDRESS</string>
    <string name="regLblzipcode">ZIP CODE</string>
    <string name="regLblCountry">COUNTRY</string>
    <string name="regLblEmail">EMAIL</string>
    <string name="regLblContFName">CONTACT FIRST NAME</string>
    <string name="regLblContLName">CONTACT LAST NAME</string>
    <string name="regLblContTitle">CONTACT TITLE</string>
    <string name="proPageTitle">PRODUCT MANAGEMENT</string>
    <string name="corporatePageTitle">CORPORATE MANAGEMENT</string>
    <string name="qualityPageTitle">QUALITY MANAGEMENT</string>
    <string name="customerPageTitle">CUSTOMER MANAGEMENT</string>
    <string name="supplierPageTitle">SUPPLIER MANAGEMENT</string>
    <string name="sorLabelSupplierID">Supplier ID</string>
    <string name="sorLabelOrderNo">Order N°</string>
    <string name="sorLabelOrderDate">Order Date</string>
    <string name="sorLabelDeliveryNoteNo">Delivery Note N°</string>
    <string name="sorLabelStatus1">Status</string>
    <string name="sorLabelDelivery">Delivery</string>
    <string name="sorLabelInvoice">Invoice</string>
    <string name="sorLabelDueDate">Due Date</string>
    <string name="sorLabelStatus2">Status</string>
    <string name="sorLabelOverdue">Overdraft(%s)</string>
    <string name="opPageTitle">ORDER FOR PREPARATION</string>
    <string name="cashierPageTitle">CASHIER DESK</string>
    <string name="accountingPageTitle">ACCOUNTING</string>
    <string name="dashboardPageTitle">DASHBOARD</string>
    <string name="salesPageTitle">SALES MANAGEMENT</string>
    <string name="hrPageTitle">HUMAN RESOURCES</string>
    <string name="financialDrawerTitle">FINANCIAL MANAGEMENT</string>
    <string name="bcilLabelRef">Ref</string>
    <string name="bcilLabelOrderNo">Order No</string>
    <string name="bcilLabelDate">Date</string>
    <string name="bcilLabelTime">Time</string>
    <string name="bcilLabelPaymentMethod">Payment Method</string>
    <string name="bcilLabelDebit">Debit(%s)</string>
    <string name="bcilLabelCredit">Credit(%s)</string>
    <string name="bcilLabelStatus">Status</string>
    <string name="bcilLabelOverdue">Overdraft(%s)</string>
    <string name="bcilLabelDeliveryType">Delivery Type</string>
    <string name="bcilLabelThirdParty">Customer Company Name</string>
    <string name="bcilLabelTotalPayableAmount">Total Payable Amount(%s)</string>
    <string name="bvilLabelRef">Ref</string>
    <string name="bvilLabelInvoiceNo">Invoice No</string>
    <string name="bvilLabelDate">Date</string>
    <string name="bvilLabelPaymentMethod">Payment Method</string>
    <string name="bvilLabelDebit">Debit(%s)</string>
    <string name="bvilLabelCredit">Credit(%s)</string>
    <string name="bvilLabelStatus">Status</string>
    <string name="bvilLabelOverdue">Overdraft(%s)</string>
    <string name="bvilLabelThirdParty">Supplier Company Name</string>
    <string name="bvilLabelTotalPayableAmount">Total Payable Amount(%s)</string>
    <string name="bvpLabelRef">Ref</string>
    <string name="bvpLabelInvoiceNo">Invoice No</string>
    <string name="bvpLabelSupplierCompanyName">Supplier Company Name</string>
    <string name="bvpLabelDate">Date</string>
    <string name="bvpLabelPayMethod">Payment Method</string>
    <string name="bvpLabelPayAmount">Total Payable Amount(%s)</string>
</resources>