<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/customer_complaint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_4sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingRight="@dimen/_4sdp"
        android:paddingBottom="@dimen/margin_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/input_lable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sorLabelSupplierID"
                android:textAlignment="center"
                android:textSize="@dimen/table_layout_h_text_size" />

            <TextView
                style="@style/input_lable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sorLabelOrderNo"
                android:textAlignment="center"
                android:textSize="@dimen/table_layout_h_text_size" />

            <TextView
                style="@style/input_lable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sorLabelOrderDate"
                android:textAlignment="center"
                android:textSize="@dimen/table_layout_h_text_size" />

            <TextView
                style="@style/input_lable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sorLabelDeliveryNoteNo"
                android:textAlignment="center"
                android:textSize="@dimen/table_layout_h_text_size" />

            <TextView
                style="@style/input_lable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sorLabelStatus1"
                android:textAlignment="center"
                android:textSize="@dimen/table_layout_h_text_size" />

            <TextView
                style="@style/input_lable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sorLabelDelivery"
                android:textAlignment="center"
                android:textSize="@dimen/table_layout_h_text_size" />

            <TextView
                style="@style/input_lable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sorLabelInvoice"
                android:textAlignment="center"
                android:textSize="@dimen/table_layout_h_text_size" />

            <TextView
                style="@style/input_lable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sorLabelDueDate"
                android:textAlignment="center"
                android:textSize="@dimen/table_layout_h_text_size" />

            <TextView
                style="@style/input_lable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sorLabelStatus2"
                android:textAlignment="center"
                android:textSize="@dimen/table_layout_h_text_size" />

            <TextView
                style="@style/input_lable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sorLabelOverdue"
                android:textAlignment="center"
                android:textSize="@dimen/table_layout_h_text_size" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#dedede"></View>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sor_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</RelativeLayout>